[package]
name = "howtorust"
version = "0.8.0"
edition = "2021"

[[bin]]
name = "howtorust"
path = "src/main.rs"

[dependencies]
colored = "2.1"
tokio = { version = "1.42", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
crossterm = "0.28"
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
